Update calendar layout to fix row alignment and adjust column spacing

--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,22 @@
 
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
+    grid-template-columns: 1fr repeat(7, 3fr);
+    grid-template-rows: repeat(26, 1fr);
+    column-gap: 10px;
+}
+
+.marker {
+    justify-self: end;
+    align-items: end;
+}
+
+#time-marker, .day {
+    display: contents;
+}
+
+.chunk {
+    outline: .2px dashed black;
 }
 
 .day {
